# rs-ex-3

./: Cargo.toml  Dockerfile
src/: main.rs
src/core/: jenkins.rs  mod.rs  subpack.rs  svn.rs
src/elements/: firstname.rs  mod.rs  packtypes.rs  prename.rs
src/ui/: mod.rs  svnupgrader.rs  userinfo.rs
