[package]
name = "simple-ui"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.3.0", features = ["async-std", "debug"] }
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0.133"
native-dialog = "0.6.2"
sqlite = "0.26.0"
structopt = "0.3.25"
ureq = "2.4.0"
toml = "0.5.8"
dirs = "1.0.4"
url = "2.2.2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
async-std = "1.0"
directories-next = "2.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = ["Window", "Storage"] }
wasm-timer = "0.2"

[package.metadata.deb]
assets = [
    ["target/release/todos", "usr/bin/iced-todos", "755"],
    ["iced-todos.desktop", "usr/share/applications/", "644"],
]

[profile.release]
lto = true
panic = 'abort'
opt-level = 'z'
codegen-units = 1
